get printer working

--- a/cc/lib/CMakeLists.txt
+++ b/cc/lib/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_library(peachy_ir_agent dummy.cc)
+set(SOURCES ir.cc kernels/matmul.cc)
+
+add_library(peachy_ir_agent ${SOURCES})
 target_include_directories(peachy_ir_agent PUBLIC ${PROJECT_SOURCE_DIR}/include)
