--- a/cc/lib/CMakeLists.txt
+++ b/cc/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SOURCES ir.cc kernels/matmul.cc)
+set(SOURCES ir.cc kernels/matmul.cc transforms/tile.cc)
 
 add_library(peachy_ir_agent ${SOURCES})
 target_include_directories(peachy_ir_agent PUBLIC ${PROJECT_SOURCE_DIR}/include)
