add critical section, local accum, and cpp gen. preserve parallelism in all passes

--- a/cc/lib/CMakeLists.txt
+++ b/cc/lib/CMakeLists.txt
@@ -1,8 +1,13 @@
 set(
   SOURCES
   ir.cc
+  codegen/cpp_gen.cc
+  codegen/critical_section.cc
+  codegen/local_accum.cc
   kernels/matmul.cc
   transforms/enclosing_loop_stride_finder.cc
+  transforms/parallel.cc
+  transforms/reorder.cc
   transforms/tile_common.cc
   transforms/tile_resize.cc
   transforms/tile.cc
