--- a/cc/test/CMakeLists.txt
+++ b/cc/test/CMakeLists.txt
@@ -10,3 +10,7 @@ create_test(ir_test)
 create_test(tile_test)
 create_test(tile_resize_test)
 create_test(reorder_test)
+create_test(parallel_test)
+create_test(critical_section_test)
+create_test(local_accum_test)
+create_test(cpp_gen_test)
